--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,3 +5,4 @@ log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.logger.org.deri.tarql=WARN
 log4j.logger.com.hp.hpl.jena=INFO
 log4j.logger.com.hp.hpl.jena.sparql.expr.NodeValue=ERROR
+log4j.logger.org.apache.jena.riot.system=INFO
