Test cases for very large inputs

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
       <artifactId>jchardet</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
