--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
       <version>2.12.0</version>
     </dependency>
     <dependency>
-      <groupId>net.sf.opencsv</groupId>
+      <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>2.3</version>
+      <version>3.8</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.jchardet</groupId>
