--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=DEBUG, A1
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.logger.Jena=INFO
+log4j.logger.SPARQL=ERROR
+log4j.logger.org.apache.jena=INFO
 log4j.logger.org.deri.tarql=WARN
-log4j.logger.com.hp.hpl.jena=INFO
-log4j.logger.com.hp.hpl.jena.sparql.expr.NodeValue=ERROR
-log4j.logger.org.apache.jena.riot.system=INFO
