--- a/pom.xml
+++ b/pom.xml
@@ -8,36 +8,22 @@
 
   <name>Tarql</name>
   <description>Convert CSV files to RDF using SPARQL syntax</description>
-  <url>http://github.com/cygri/tarql</url>
+  <url>http://github.com/tarql/tarql</url>
   <inceptionYear>2013</inceptionYear>
 
   <licenses>
     <license>
       <name>The BSD 2-Clause License</name>
-      <url>https://raw.github.com/cygri/tarql/master/LICENSE</url>
+      <url>https://raw.github.com/tarql/tarql/master/LICENSE</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
 
   <scm>
-    <connection>scm:git:git@github.com:cygri/tarql.git</connection>
-    <developerConnection>scm:git:git@github.com:cygri/tarql.git</developerConnection>
-    <url>https://github.com/cygri/tarql/tree/master/</url>
+    <connection>scm:git:git@github.com:tarql/tarql.git</connection>
+    <developerConnection>scm:git:git@github.com:tarql/tarql.git</developerConnection>
+    <url>https://github.com/tarql/tarql/tree/master/</url>
   </scm>
-
-  <developers>
-    <developer>
-      <id>cygri</id>
-      <name>Richard Cyganiak</name>
-      <email>richard@cyganiak.de</email>
-      <url>http://richard.cyganiak.de/</url>
-      <organization>DERI, NUI Galway</organization>
-      <organizationUrl>http://www.deri.ie/</organizationUrl>
-      <roles>
-        <role>developer</role>
-      </roles>
-    </developer>
-  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -47,7 +33,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -83,7 +69,7 @@
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>3.6.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -92,7 +78,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>appassembler-maven-plugin</artifactId>
-        <version>1.3</version>
+        <version>1.10</version>
         <configuration>
           <repositoryLayout>flat</repositoryLayout>
           <repositoryName>lib</repositoryName>
@@ -133,7 +119,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -146,7 +132,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9</version>
+        <version>2.10.4</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -159,7 +145,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.5</version>
+        <version>2.6</version>
         <configuration>
           <archive>
             <manifest>
