--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
   <properties>
     <jena.version>3.11.0</jena.version>
+    <opencsv.version>4.6</opencsv.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -50,7 +51,7 @@
     <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>4.0</version>
+      <version>${opencsv.version}</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.jchardet</groupId>
