--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>jchardet</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
