--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
       <version>${opencsv.version}</version>
     </dependency>
     <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>net.sourceforge.jchardet</groupId>
       <artifactId>jchardet</artifactId>
       <version>1.0</version>
@@ -78,7 +84,7 @@
         <configuration>
           <repositoryLayout>flat</repositoryLayout>
           <repositoryName>lib</repositoryName>
-          <installArtifacts>false</installArtifacts>
+<!--          <installArtifacts>false</installArtifacts>-->
           <programs>
             <program>
               <mainClass>org.deri.tarql.tarql</mainClass>
