--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+        </configuration>
         <version>2.10.4</version>
         <executions>
           <execution>
