--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
   </scm>
 
   <properties>
-    <jena.version>3.11.0</jena.version>
+    <java.version>11</java.version>
+    <jena.version>4.5.0</jena.version>
     <opencsv.version>4.6</opencsv.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -58,6 +59,13 @@
       <artifactId>jchardet</artifactId>
       <version>1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.17.2</version>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -65,10 +73,9 @@
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
+        <version>3.10.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>${java.version}</release>
         </configuration>
       </plugin>
       <plugin>
